Indent code blocks. Reorganize CSS.

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 
     <section>
       <h2>Code</h2>
-      <p>Code samples are monospace using the 'code' class. The <span class="code">pre</span> tag is recommended for code blocks.</p>
+      <p>Code samples are monospace using the 'code' class. The <span class="code">pre</span> tag is recommended for code blocks, which also adds indentation.</p>
       <pre class="code">
-  (map tufte-style all-the-things)
+(map tufte-style all-the-things)
 
-  for (i = 0; i++; i <= languagesWithoutHigherOrderFunctions) {
-    useTufteStyle();
-  }
+for (i = 0; i++; i <= languagesWithoutHigherOrderFunctions) {
+  useTufteStyle();
+}
       </pre>
 </body>
 </html>
