Clarify How to Use

--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
 
     <section>
       <h2>How to Use</h2>
-      <p>To use Tufte-CSS on your own HTML page, just copy <span class="code">tufte.css</span> and <span class="code">ETBembo-RomanLF.ttf</span> to your project directory and add the following to your HTML doc's head block:</p>
+      <p>To use Tufte-CSS on your own HTML page, just copy <span class="code">tufte.css</span> and <span class="code">ETBembo-RomanLF.ttf</span> to your project directory and add the following to your document's <span class="code">head</span> block:</p>
 
       <pre class="code">&lt;link rel="stylesheet" href="tufte.css"/&gt;</pre>
 
-      <p>Now you just have to use the provided CSS rules. This document attempts to demonstrate the available functionality, so please explore the source and Inspect Element frequently.</p>
-
-      <p>The basic skeleton I use is to wrap an <span class="code">&lt;article&gt;</span> tag around the entire shebang, and <span class="code">&lt;section&gt;</span> tags around each logical grouping of text and headings.</p>
+      <p>Now you just have to use the provided CSS rules. This document attempts to demonstrate the available functionality, so please explore the source and Inspect Element frequently. Start by wrapping an <span class="code">&lt;article&gt;</span> tag around the entire shebang and <span class="code">&lt;section&gt;</span> tags around each logical grouping of text and headings, then just write your HTML as normal. The rest of this document will describes special cases where more is required.</p>
     </section>
     
     <section>
