Modify code margin to fix overflow on small screen

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Tufte CSS</title>
   <link rel="stylesheet" href="tufte.css"/>
   <link rel="stylesheet" href="latex.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <article>
