Whoops! da325d4 fixed the wrong margin.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <h2>Getting Started</h2>
       <p>To use Tufte-CSS, copy <span class="code">tufte.css</span> and <span class="code">ETBembo-RomanLF.ttf</span> to your project directory and add the following to your HTML document's <span class="code">head</span> block:</p>
 
-      <pre class="code">&lt;link rel="stylesheet" href="tufte.css"/&gt;</pre>
+      <pre class="code">&lt;link rel="stylesheet"
+      href="tufte.css"/&gt;</pre>
 
       <p>Now you just have to use the provided CSS rules, and the Tufte-CSS conventions described in this document. For best results, View Source and Inspect Element frequently.</p>
     </section>
