"Data" is a plural

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     
     <section>
       <h2>Tables</h2>
-      <p>Tabular data is presented with right-aligned text and minimal grid lines. Table labels are margin notes placed inside a <span class="code">p</span> tag that wraps the <span class="code">table</span>.</p>
+      <p>Tabular data are presented with right-aligned text and minimal grid lines. Table labels are margin notes placed inside a <span class="code">p</span> tag that wraps the <span class="code">table</span>.</p>
       <p>
         <span class="marginnote">Table 1: first row of metcars.</span>
         <table>
